2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/pychecker:
	  Adding a script to be used as the pychecker binary when
	  running uninstalled.
	* misc/pychecker-uninstalled:
	  Add a script to run pychecker uninstalled.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Implement STORE_MAP dispatcher.
	  Fixes test/test_dict.py

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/checker.py:
	* pychecker/utils.py:
	  Further documentation and commenting.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/Warning.py:
	* pychecker/utils.py:
	* pychecker/warn.py:
	  Add comments and docstrings as I learn.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/warn.py:
	  raise NotImplementedError where we actually have the
	  opcode.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Add opcodes from 2.5 and 2.6

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_stdlib.py:
	  For now, return OK if we can't import zope.interface,
	  since there is no skip support in the standard unittest.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING:
	  Add note on setting PYTHONPATH for running tests.
	* test/common.py:
	  Also make trial work for Twisted 1.3.0 which we use for
	  Python 2.3 testing.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Add _empty and _unimplemented as opcode dispatchers.
	  Add all missing opcodes for python 2.4
	* pychecker/warn.py:
	  For now, print a NotImplementedError if there are still
	  missing opcodes.  This should be changed to a raise
	  when we've added all opcodes from released python versions.
	* test/main.py: